force-app/main/default/objects/custom_create316__c/custom_create316__c.object-meta.xml
<CustomObject>
    <label>Custom created object316</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects316</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>