force-app/main/default/objects/custom_create316__c/fields/custom_create_316field565__c.field-meta.xml
<CustomField>
    <fullName>custom_create_316field565__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 316field565</label>
    <type>Checkbox</type>
</CustomField>